--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ install:
 
 script:
   - python3 -m flake8
+  - python3 -m pip install PyGObject-stubs
   - python3 -m pip install --no-deps .
   - python3 -m mypy examples
