--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
-matrix:
-  include:
-    - os: linux
-      dist: xenial
-      sudo: required
-      language: python
-      python: "3.7"
+dist: bionic
+sudo: required
+language: python
+python: 3.6_with_system_site_packages
 
 install:
   - sudo apt-get install python3-gi python3-gst-1.0
